@@ -1228,6 +1228,7 @@ static int ast_rtp_write(struct ast_rtp_instance *instance, struct ast_frame *fr
 
 		switch (subclass) {
 		case AST_FORMAT_SPEEX:
+		case AST_FORMAT_SPEEX16:
 		case AST_FORMAT_G723_1:
 		case AST_FORMAT_SIREN7:
 		case AST_FORMAT_SIREN14:
